# mdcrud

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src/: editor-ops.test.ts  editor-ops.ts  i18n.ts  main.ts  markdown.test.ts  markdown.ts  paths.test.ts  paths.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
